--- a/New Unity Project 2/Assembly-CSharp.csproj
+++ b/New Unity Project 2/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\ProjectileBehavior.cs" />
     <Compile Include="Assets\Scripts\RangedEnemyController.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Spell.cs" />
     <Compile Include="Assets\Scripts\TextManager.cs" />
     <Compile Include="Assets\Scripts\XPController.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
