Progress on spell creation ui

--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Assets\Scripts\Spell Scripts\Spell.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Tsunami\TsunamiBehavior.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Tsunami\TsunamiSpell.cs" />
+    <Compile Include="Assets\Scripts\SpellCreationUI\SimpleObjectPool.cs" />
+    <Compile Include="Assets\Scripts\SpellCreationUI\SpellListButton.cs" />
+    <Compile Include="Assets\Scripts\SpellCreationUI\SpellScrollList.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/prini/Documents/GitHub/magician/Test Scene/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
