Worked on Spell Creation

--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellCrafter.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellInfo.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellListButton.cs" />
+    <Compile Include="Assets\Scripts\SpellCreationUI\SpellManager.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellScrollList.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/prini/Documents/GitHub/magician/Test Scene/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
