tried implementing teleport

--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -111,14 +111,16 @@
     <Compile Include="Assets\Scripts\ProceduralGeneration\quickPlayerr.cs" />
     <Compile Include="Assets\Scripts\ProceduralGeneration\roomTemplates.cs" />
     <Compile Include="Assets\Scripts\ProceduralGeneration\roomVert.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\EarthPillar\EarthPillarBehavior.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\EarthPillar\EarthPillarSpell.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\Fireball\FireballBehavior.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\Fireball\FireballSpell.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\Fireball\FireballSpellInfo.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\EarthPillar\EarthPillarBehavior.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\EarthPillar\EarthPillarSpell.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\Fireball\FireballBehavior.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\Fireball\FireballSpell.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\Fireball\FireballSpellInfo.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\Tsunami\TsunamiBehavior.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Attack\Tsunami\TsunamiSpell.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Spell.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\Tsunami\TsunamiBehavior.cs" />
-    <Compile Include="Assets\Scripts\Spell Scripts\Tsunami\TsunamiSpell.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Utility\Teleport\TeleportBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Utility\Teleport\TeleportSpell.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SimpleObjectPool.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellCrafter.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SpellInfo.cs" />
