--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Assets\Scripts\Spell Scripts\Attack\Tsunami\TsunamiBehavior.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Attack\Tsunami\TsunamiSpell.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Spell.cs" />
+    <Compile Include="Assets\Scripts\Spell Scripts\Utility\Teleport.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Utility\Teleport\TeleportBehaviour.cs" />
     <Compile Include="Assets\Scripts\Spell Scripts\Utility\Teleport\TeleportSpell.cs" />
     <Compile Include="Assets\Scripts\SpellCreationUI\SimpleObjectPool.cs" />
