--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Our Assets\Scripts\custom_inputs.cs" />
     <Compile Include="Assets\Packages\Modern_GUI_Skin\Demo_Assets\scripts\GUI_Demo.cs" />
     <Compile Include="Assets\Packages\NeonShapes\SelfDestroyScript.cs" />
     <Compile Include="Assets\Scripts\Archived\SpellCreationUI\SimpleObjectPool.cs" />
