--- a/Test Scene/Assembly-CSharp.csproj
+++ b/Test Scene/Assembly-CSharp.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Assets\Scripts\Enemies\Unit.cs" />
     <Compile Include="Assets\Scripts\General\ChildActivator.cs" />
     <Compile Include="Assets\Scripts\General\GameData\Game.cs" />
+    <Compile Include="Assets\Scripts\General\GameData\GlobalControl.cs" />
     <Compile Include="Assets\Scripts\General\GameData\Save.cs" />
     <Compile Include="Assets\Scripts\General\GameData\SaveData.cs" />
     <Compile Include="Assets\Scripts\General\LoadScene.cs" />
